# yaasm

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.js
.github/workflows/: pages-publish.yml  release.yml  test-build.yml
docs/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
docs/src/: app.postcss
docs/src/routes/: +layout.svelte  +page.svelte
src/: app.html  app.postcss  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  types.rs
src/lib/: Sidebar.svelte  bindings.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/servers/[server_id]/: +layout.svelte  +page.svelte
