[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = ["specta"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-theme = "2.1.1"
tauri-plugin-window-state = "2.0.0-rc"
anyhow = "1.0.89"
rcon = { version = "0.6.0", features = ["rt-async-std"] }
gamedig = { version = "0.5.1", features = ["tls", "serde"] }
tauri-specta = { version = "2.0.0-rc.20", features = [
    "derive",
    "typescript",
    "javascript",
] }
specta = { version = "=2.0.0-rc.20", features = ["function"] }
specta-typescript = "0.0.7"
specta-jsdoc = { version = "0.0.7" }
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
serde_yaml = "0.9.34"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
